add walkspeed command add comment to walkspeed module fix comment on sprint module